# MEMU

./: CMakeCache.txt  CMakeLists.txt  MEMU  Makefile  README.md  cmake_install.cmake  main.cpp  mem_machine_code.hex  out.txt
include/: common.h  cpu.h  memory.h
src/: cpu.cpp  memory.cpp  monitor.cpp  runner.cpp  shell.cpp
